- UserSettingsChangedLog: Fixed multiple entries in the log when the user changes a preference setting
- UserSettingsChangedLog: Fixed to not add log entries upon account creation
- Added 'reload' right (FileManager extension)
- FileManager: added 'reload' capability
- FIXED broken 'ForeachFunction': missing file
===============================
REL1_10_11: (released ...) 
- Added 'NewUserEmailNotification' extension
- Added 'UserLoginLogoutLog' extension
- Adjusted 'PermissionFunctions' for stubbing
- StubManager: added namespace triggering functionality
- Adjusted 'InterWikiLinkManager' for namespace triggering
- Adjusted 'FileSystemSyntaxColoring' for namespace triggering
- Adjusted 'SecureHTML' for removing dependancy on ExtensionClass. Made 'stub'-enabled
- Added 'SkinTools' extension
- Added 'UserTools' extension ( new right 'userdetails' )
- Fixed major bug in 'RegexNamespaceContext'
- FileSystemSyntaxColoring: some optimizations for speed
- ParserPhase2: better handling of 'disable' commands
- Several minor enhancements to:
-- RegexTools
-- RegexNamespaceContext
-- FileManager
-- FileSystemSyntaxColoring
-- ParserPhase2
- SidebarEx: added per-user sidebar functionality
- Added 'VirtualPage' extension
- FileManager: added 'Proprietary Words' functionality
- FileManager: added 'parser phase 2' magic words functionality
- FileSystemSyntaxColoring: added '<!--@@ wikitext @@-->' pattern to hide wikitext
- PageFunctions: added '#noext' magic word
- Added 'AutoRedirect' extension
- Added 'DirectoryManager' extension
- Simplified installation procedure for all 'stubbed' extensions
- Fix 'FileManager': didn't show up log records correctly
- FileManager: removed dependency on ExtensionClass + made stub
- InterWikiLinkManager: added cancellation of hook-chain on EditFormPreloadText
- Massive update of almost all extension headers - normalization
- StubManager: support for 'exclude' namespace triggering
- 